# CacheDNS

./: CacheDNS.cabal  CacheDNS.json  LICENSE  README.md  application.conf  sample.txt
app/: Main.hs
app/CacheDNS/APP/: CacheManager.hs  CmdParser.hs  CryptoUDPServer.hs  DNSHelper.hs  JobQueue.hs  Log.hs  Resolver.hs  Types.hs  UDPServer.hs
src/CacheDNS/: DNS.hs
src/CacheDNS/Cache/: AtomicLRU.hs  LRU.hs
src/CacheDNS/Cache/LRU/: Atomic.hs  IO.hs  Internal.hs
src/CacheDNS/Cache/LRU/IO/: Internal.hs
src/CacheDNS/Concurrent/: CondVar.hs  SemVar.hs
src/CacheDNS/Crypto/: Common.hs  Cryptor.hs
src/CacheDNS/DNS/: Decode.hs  Encode.hs  Internal.hs  Lookup.hs  Resolver.hs  StateBinary.hs  Types.hs  Utils.hs
src/CacheDNS/IPC/: Mailbox.hs
src/Network/DNS/: Decode.hs  Encode.hs  Internal.hs  Resolver.hs  StateBinary.hs
src/Transport/IPC/: Mailbox.hs
