name:                CacheDNS
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/CacheDNS#readme
license:             BSD3
license-file:        LICENSE
author:              David.Gao
maintainer:          david.alpha.fox@gmail.com
copyright:           2016 ailink.io
category:            App
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CacheDNS.DNS
                       CacheDNS.DNS.Lookup
                       CacheDNS.DNS.Resolver
                       CacheDNS.DNS.Utils
                       CacheDNS.DNS.Types
                       CacheDNS.DNS.Encode
                       CacheDNS.DNS.Decode
                       CacheDNS.Cache.LRU
                       CacheDNS.Cache.AtomicLRU
                       CacheDNS.IPC.Mailbox
        
  Other-Modules:       CacheDNS.DNS.Internal 
                       CacheDNS.DNS.StateBinary
                       CacheDNS.Cache.LRU.Internal
                       CacheDNS.Cache.LRU.Atomic

  build-depends:       base >= 4.6 && < 5
                      , attoparsec
                      , binary
                      , bytestring
                      , bytestring-builder
                      , conduit >= 1.1 && < 2
                      , conduit-extra >= 1.1 && < 2
                      , containers >= 0.2 && < 0.6
                      , contravariant >= 0.5 && < 2
                      , iproute >= 1.3.2
                      , mtl
                      , stm == 2.4.4.1
                      , network >= 2.3
                      , random
                      , resourcet
                      , safe == 0.3.*
  default-language:    Haskell2010

executable CacheDNS
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N 
  build-depends:       base >= 4.6 && < 5
                     , bytestring
                     , binary
                     , text == 1.2.2.1
                     , hslogger
                     , network >= 2.3
                     , iproute >= 1.3.2
                     , async
                     , stm == 2.4.4.1
                     , time == 1.5.0.1
                     , mtl
                     , transformers == 0.4.2.0
                     , containers >= 0.2 && < 0.6
                     , configurator >= 0.3.0.0
                     , CacheDNS
  default-language:    Haskell2010

test-suite CacheDNS-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , stm == 2.4.4.1
                     , CacheDNS
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/CacheDNS
